--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,3 +2,5 @@
 # Use is subject to license terms. This is an unpublished work.
 
 scheduledjob.desc.purge-old-attachments-job=Purge Old Attachment Revisions
+
+com.drunkendev.confluence.plugins.attachment-tools.config.title=Configure Attachment Purging
