--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,7 +2,7 @@
 # Use is subject to license terms. This is an unpublished work.
 
 scheduledjob.desc.purge-old-attachments-job=Purge Old Attachment Revisions
-scheduledjob.desc.PurgeOldAttachmentsJobDetail=Purge Old Attachment Revisions
+scheduledjob.desc.PurgeAttachmentsJobDetail=Configure Attachment Purging
 
 com.drunkendev.confluence.plugins.attachment-tools.config.title=Configure Attachment Purging
 com.drunkendev.confluence.plugins.attachments.ConfigurePurgeAttachmentsAction.action.name=Configure Attachment Purging
