--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <confluence.version>4.2.4</confluence.version>
+    <confluence.version>4.3-beta1</confluence.version>
     <confluence.data.version>4.2.4</confluence.data.version>
     <amps.version>3.11</amps.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
