Releasing version 0.9-preview for testing.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,7 +1,17 @@
-# Copyright 2010 John Sands (Australia) Ltd. All rights reserved.
-# Use is subject to license terms. This is an unpublished work.
+#
+# i18n.properties
+#
+# Copyright 2012 Drunken Dev. All rights reserved.
+# Use is subject to license terms.
+#
+# Author: Brett Ryan
 
+# Attachment Purging - Job name.
 scheduledjob.desc.purge-old-attachments-job=Purge Old Attachment Revisions
 
-com.drunkendev.confluence.plugins.attachment-tools.config.title=Configure Attachment Purging
+# Attachment Purging - Space menu-item config text.
+com.drunkendev.confluence.plugins.attachment-tools-plugin.config.purge=Attachment Purging
+# Attachment Purging - Space config path.
 com.drunkendev.confluence.plugins.attachments.ConfigurePurgeAttachmentsAction.action.name=Configure Attachment Purging
+# Attachment Purging - Config title (space and global).
+com.drunkendev.confluence.plugins.attachment-tools.config.title=Configure Attachment Purging
