--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,15 @@
   <groupId>com.drunkendev.confluence.plugins</groupId>
   <artifactId>attachment-tools-plugin</artifactId>
   <name>Attachment Tools Plugin</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.9-PREVIEW</version>
 
   <properties>
-    <confluence.version>4.3-beta1</confluence.version>
+    <confluence.version>4.2.4</confluence.version>
     <confluence.data.version>4.2.4</confluence.data.version>
     <amps.version>3.11</amps.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <netbeans.hint.license>dd</netbeans.hint.license>
+    <key>${project.groupId}.${project.artifactId}</key>
   </properties>
 
   <dependencies>
@@ -62,6 +63,26 @@
   </dependencies>
 
   <build>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/*.properties</exclude>
+          <exclude>**/*.xml</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/*.properties</include>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>com.atlassian.maven.plugins</groupId>
