--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
   <groupId>com.drunkendev.confluence.plugins</groupId>
   <artifactId>attachment-tools-plugin</artifactId>
   <name>Attachment Tools Plugin</name>
-  <version>0.9-PREVIEW</version>
+  <version>0.9.1</version>
 
   <properties>
-    <confluence.version>4.2.4</confluence.version>
-    <confluence.data.version>4.2.4</confluence.data.version>
+    <confluence.version>4.3</confluence.version>
+    <confluence.data.version>4.3</confluence.data.version>
     <amps.version>3.11</amps.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <netbeans.hint.license>dd</netbeans.hint.license>
