--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
   <groupId>com.drunkendev.confluence.plugins</groupId>
   <artifactId>attachment-tools-plugin</artifactId>
   <name>Attachment Tools Plugin</name>
-  <version>1.1.0</version>
+  <version>1.2.0-5.7</version>
 
   <properties>
-    <confluence.version>5.5.3</confluence.version>
-    <confluence.data.version>5.5.3</confluence.data.version>
-    <amps.version>5.0.3</amps.version>
+    <confluence.version>5.7.6</confluence.version>
+    <confluence.data.version>5.7.6</confluence.data.version>
+    <amps.version>6.2.2</amps.version>
     <plugin.testrunner.version>1.2.0</plugin.testrunner.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <netbeans.hint.license>dd</netbeans.hint.license>
@@ -88,6 +88,7 @@
         <configuration>
           <productVersion>${confluence.version}</productVersion>
           <productDataVersion>${confluence.data.version}</productDataVersion>
+          <jvmArgs>-Dconfluence.velocity.deprecation.strictmode=false</jvmArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -95,8 +96,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
           <encoding>${project.build.sourceEncoding}</encoding>
         </configuration>
       </plugin>
