--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.atlassian.sal</groupId>
+      <artifactId>sal-api</artifactId>
+      <version>2.7.0</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>com.atlassian.confluence</groupId>
       <artifactId>confluence</artifactId>
