--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -7,7 +7,8 @@
 # Author: Brett Ryan
 
 # Attachment Purging - Job name.
-scheduledjob.desc.purge-old-attachments-job=Purge Attachment Revisions
+#scheduledjob.desc.purge-old-attachments-job=Purge Attachment Revisions
+scheduledjob.desc.purge-old-attachments-trigger=Purge Attachment Revisions
 
 # Attachment Purging - Space menu-item config text.
 com.drunkendev.confluence.plugins.attachment-tools-plugin.config.purge=Attachment Purging
