--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.drunkendev.confluence.plugins</groupId>
   <artifactId>attachment-tools-plugin</artifactId>
   <name>Attachment Tools Plugin</name>
-  <version>1.3.0</version>
+  <version>1.4.0-SNAPSHOT</version>
 
   <properties>
     <confluence.version>5.10.7</confluence.version>
