--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
   <groupId>com.drunkendev.confluence.plugins</groupId>
   <artifactId>attachment-tools-plugin</artifactId>
   <name>Attachment Tools Plugin</name>
-  <version>1.4.0-SNAPSHOT</version>
+  <version>1.3.0-5.9</version>
 
   <properties>
-    <confluence.version>5.10.7</confluence.version>
-    <confluence.data.version>5.10.7</confluence.data.version>
+    <confluence.version>5.9.4</confluence.version>
+    <confluence.data.version>5.9.1</confluence.data.version>
     <amps.version>6.2.9</amps.version>
     <plugin.testrunner.version>1.2.0</plugin.testrunner.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
